# nava-s-workbench

./: .gitignore  README.md  collaborations.txt  dev_todos.txt  hello-world.html  package-lock.json  tmasci-calendar-assistant.html
.github/workflows/: deploy-to-neocities.yml
3qclub/: README.md  members.md  week1.md  week2.md
3qclub/drafts/: week1_draft.md
astrid/state_based_astrid/: README.md
backend/: bot.js  package-lock.json  package.json  s3.js  server.js  sockets.js
backend/data/: hedges.js  users.js
backend/public/: admin.html
backend/routes/: admin.js  hedges.js  users.js
blog/: index.html
blog/css/: styles.css
blog/js/: content-loader.js  vim-navigation.js
blog/pages/: critical_clockwerk_shop.html  critical_clockwerkshop.html  itp_gallery.html  nachsterb_inn.html  three_quarters_club.html
blog_dev/: .implementation_notes.txt.swp  .refactor_instructions.txt.swp  README.md  implementation_notes.txt  index.html  nachsterbinn_design_notes.txt  refactor_instructions.txt
blog_dev/js/: content_loader.js  template-loader.js
blog_dev_copy/: VIM_NAVIGATION_GUIDE.md  implementation_notes.txt  index.html  nachsterbinn_design_notes.txt  redesign_instructions.txt
classes/: collaborations.txt
essays/: README.md  presence_of_a_particle.md
fibril/: algorithm_notes.txt  fibril_essay.txt
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
hyperbridge/: hyperbridge_09222025_devlog-components-list.txt  hyperbridge_highest_tension.heic  hyperbridge_lowest_tension.heic  hyperbridge_middle_tension.heic
mathvids/: implementation_guide.md  project_description.md
mathvids/mathviz/: .gitignore  ASPECT_RATIO_GUIDE.md  BUILD_AND_RUN.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  PHASE_2_COMPLETE.md  POSTER_FEATURE_SUMMARY.md  README.md  TRY_IT_NOW.md  quick_build.sh  setup_imgui.sh
mathvids/mathviz/examples/: POSTER_PREVIEW.txt  README_POSTERS.md  poster_winter_show_2025.md  poster_winter_show_2025_fixed.md
mathvids/mathviz/include/core/: Application.h  Body.h  Frame.h  Scene.h
mathvids/mathviz/include/gui/: ConsolePanel.h  PanelManager.h  ScriptPanel.h  ViewPanel.h
mathvids/mathviz/include/parser/: CommandParser.h
mathvids/mathviz/include/renderer/: Renderer.h  Shader.h
mathvids/mathviz/src/: main.cpp
mathvids/mathviz/src/core/: Application.cpp  Body.cpp  Frame.cpp  Scene.cpp
mathvids/mathviz/src/gui/: ConsolePanel.cpp  PanelManager.cpp  ScriptPanel.cpp  ViewPanel.cpp
mathvids/mathviz/src/parser/: CommandParser.cpp
mathvids/mathviz/src/renderer/: Renderer.cpp  Shader.cpp
nachsterbInn/: 2x2_matrices.md  star_skinning.md
orrery1/: README.md  project_dev.txt
reading/: README.md
repl1/: CMakeLists.txt  README.md
repl1/include/: input_handler.h  layout_manager.h  nvim_client.h  renderer.h  repl_interpreter.h  text_buffer.h  video_source.h  video_texture.h  video_variable.h  window_manager.h
repl1/src/: display_buffer.cpp  input_handler.cpp  layout_manager.cpp  main.cpp  renderer.cpp  repl_interpreter.cpp  text_buffer.cpp  video_source.mm  video_texture.cpp  window_manager.cpp
thoughtJournal/: .README.md.swp  README.md  hupomnemata.txt
tmasci-calendar/: index.html
typstbs/: learn-typst.typ  test.typ
(+537 files in other folders)
